--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -6,9 +6,17 @@
 Bag
 {% endblock %}
 
+{% block page_header %}
+    <div class="container header-container">
+        <div class="row">
+            <div class="col"></div>
+        </div>
+    </div>
+{% endblock %}
+
 {% block content %}
 <div class="overlay"></div>
-<div class="container bag-container mt-5 mb-2">
+<div class="container bag-container mb-2">
     <div class="row">
         <div class="col">
             <h2 class="page-banner mt-4 mb-4">Shopping Bag</h2>
