--- a/products/templates/products/edit_product.html
+++ b/products/templates/products/edit_product.html
@@ -12,16 +12,13 @@
 {% block content %}
     <div class="overlay"></div>
     <div class="container">
-        <div class="row">
+        <div class="row justify-content-center">
             <div class="col-12 col-md-6">
-                <hr>
-                <h2 class="logo-font mb-4">Product Management</h2>
-                <h5 class="text-muted">Edit a Product</h5>
-                <hr>
+                <h2 class="page-banner text-white mt-4 mb-4">Product Management</h2>
             </div>
         </div>
 
-        <div class="row">
+        <div class="row justify-content-center">
             <div class="col-12 col-md-6">
                 <form method="POST" action="{% url 'edit_product' product.id %}" class="form mb-2" enctype="multipart/form-data">
                     {% csrf_token %}
@@ -33,8 +30,8 @@
                         {% endif %}
                     {% endfor %}
                     <div class="text-right">
-                        <a class="btn btn-outline-black rounded-0" href="{% url 'products' %}">Cancel</a>
-                        <button class="btn btn-black rounded-0" type="submit">Update Product</button>
+                        <a class="btn btn-outline-black mb-5" href="{% url 'products' %}">Cancel</a>
+                        <button class="btn btn-outline-black mb-5" type="submit">Update Item</button>
                     </div>
                 </form>
             </div>            
