--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -18,9 +18,7 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <hr>
-                <h2 class="logo-font mb-4">My Profile</h2>
-                <hr>
+                <h2 class="page-banner text-white mt-4 mb-4">My Profile</h2>
             </div>
         </div>
         <div class="row">
@@ -29,7 +27,7 @@
                 <form class="mt-3" action="{% url 'profile' %}" method="POST" id="profile-update-form">
                     {% csrf_token %}
                     {{ form|crispy }}
-                    <button class="btn btn-black rounded-0 text-uppercase float-right">Update Information</button>
+                    <button class="btn btn-black float-right mb-5">Update Information</button>
                 </form>
             </div>
             <div class="col-12 col-lg-6">
@@ -58,9 +56,7 @@
                                         <ul class="list-unstyled">
                                             {% for item in order.lineitems.all %}
                                                 <li class="small">
-                                                    {% if item.product.has_sizes %}
-                                                        Size {{ item.product.size|upper }}
-                                                    {% endif %}{{ item.product.name }} x{{ item.quantity }}
+                                                   {{ item.product.name }} x{{ item.quantity }}
                                                 </li>
                                             {% endfor %}
                                         </ul>
@@ -73,7 +69,9 @@
                 </div>
             </div>
         </div>
+    </div>
 {% endblock %}
+
 
 {% block postloadjs %}
     {{ block.super }}
