--- a/static/css/base.css
+++ b/static/css/base.css
@@ -124,6 +124,7 @@ footer a i:hover {
     color: black;
     border: 1px solid black;
     border-radius: 0%;
+    text-decoration: none;
 }
 
 .btn-outline-black:hover,
@@ -307,10 +308,6 @@ a.category-badge > span.badge:hover {
     background-color: #222;
     border-color: #222;
 }
-  
-  .allauth-form-inner-content a {
-      color: #17a2b8; /* text-info */
-  }
 
 /* Product Form */
 
