--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -8,8 +8,7 @@
 {% block inner_content %}
 
 <hr>
-<h2 class="logo-font mb-4">{% trans "Sign In" %}</h2>
-<hr>
+<h2 class="page-banner text-white mt-4 mb-4">{% trans "Sign In" %}</h2>
 
 {% get_providers as socialaccount_providers %}
 
