--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -6,8 +6,7 @@
 
 {% block inner_content %}
 <hr>
-<h2 class="logo-font mb-4">{% trans "Sign Up" %}</h2>
-<hr>
+<h2 class="page-banner text-white mt-4 mb-4">{% trans "Sign Up" %}</h2>
 
 <p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
 
@@ -17,8 +16,8 @@
   {% if redirect_field_value %}
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
   {% endif %}
-  <a class="btn btn-outline-black rounded-0" href="{% url 'account_login' %}">Back to Login</a>
-  <button type="submit">{% trans "Sign Up" %}</button>
+  <a class="btn btn-outline-black rounded-0 mb-5" href="{% url 'account_login' %}">Back to Login</a>
+  <button class="mb-5" type="submit">{% trans "Sign Up" %}</button>
 </form>
 
 {% endblock %}
