--- a/inspo/templates/inspo/add_inspo_item.html
+++ b/inspo/templates/inspo/add_inspo_item.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 {% block extra_title %}Add inspo Item{% endblock %}
+
 {% block page_header %}
     <div class="container header-container">
         <div class="row">
@@ -8,21 +9,22 @@
         </div>
     </div>
 {% endblock %}
+
 {% block content %}
+
 <div class="overlay"></div>
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="col-12 col-md-6">
+            <h2 class="page-banner text-white mt-4 mb-4">Inspo Management</h2>
+        </div>
+    </div>
     <div>
         <div class="section-holder">
             <div class="form-holder-lg form-holder-generic">
-                <div class="container">
-                    <div class="row">
-                            <div class="col-12 mt-10">
-                                <h1 class="header-font mb-4 pt-2 text-center">inspo Item Management</h1>
-                                <h2 class="text-muted text-center">Add inspo Item</h2>
-                            </div>
-                    </div>
                     <!-- Add New Item -->
                     <div class="row justify-content-center container-pd">
-                        <div class="col-sm-12 col-lg-8">
+                        <div class="col-sm-12 col-lg-6">
                             <form method="POST" action="{% url 'add_inspo_item' %}" class="form mb-2" enctype="multipart/form-data">
                                 {% csrf_token %}
                                 {% for field in post_form %}
@@ -35,8 +37,8 @@
                                 <div class="text-center mt-2">
                                     <p class="mt-0">*Select 'Draft' to save the inspo item for later or select 'Publish' to publish on the
                                         site.</p>
-                                    <a class="btn black-btn" href="{% url 'inspo_items' %}">Cancel</a>
-                                    <button class="btn green-btn" type="submit">Add inspo Item</button>
+                                    <a class="btn btn-outline-black mb-5" href="{% url 'inspo_items' %}">Cancel</a>
+                                    <button class="btn btn-outline-black mb-5" type="submit">Add inspo Item</button>
                                 </div>
                             </form>
                         </div>
