--- a/static/css/base.css
+++ b/static/css/base.css
@@ -373,6 +373,58 @@ a.category-badge > span.badge:hover {
     overflow-x: hidden;
     overflow-y: auto;
 }
+
+.update-link,
+.remove-item {
+    cursor: pointer;
+    font-size: 13px;
+}
+
+input[name='q']::placeholder {
+    color: #aab7c4;
+}
+
+.cart-product-name{
+color: #433E3F;
+font-size: 16px;
+}
+
+.cart-product-name:hover{
+color: grey;
+text-decoration: none;
+}
+
+.cart-total{
+font-weight: 600;
+}
+
+.cart-items-total{
+margin: 3rem 0;
+font-family: 'Lato';
+}
+
+
+
+.cart-card-header{
+padding-bottom: 2rem;
+text-transform: uppercase;
+font-size: 20px;
+font-weight: 500;
+}
+
+.card-footer-text{
+font-size: 14px;
+color: #d80000;
+}
+
+.cart-footer{
+padding: 2rem 1rem;
+font-size: 14px;
+}
+
+.cart-footer-row{
+margin: 2rem 0;
+}
 /* ----- End of Styling ----- */
 /* ----- Start of Media Queries ----- */
 /* --- Greater than 1200px --- */
