Direct Inspo Management to add inspo page

--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -7,11 +7,11 @@ Bag
 {% endblock %}
 
 {% block page_header %}
-    <div class="container header-container">
-        <div class="row">
-            <div class="col"></div>
-        </div>
+<div class="container header-container">
+    <div class="row">
+        <div class="col"></div>
     </div>
+</div>
 {% endblock %}
 
 {% block content %}
@@ -45,10 +45,12 @@ Bag
                                             <a class="cart-product-name"
                                                 href="{% url 'product_detail' item.product.id %}">{{ item.product.name }}</a>
                                             {% if item.product.onsale %}
-                                            <p class="my-0"><strong>Price Each: </strong>${{ item.product.onsale_price  }}
+                                            <p class="my-0"><strong>Price Each:
+                                                </strong>${{ item.product.onsale_price  }}
                                             </p>
                                             <p><strong>Subtotal:
-                                                </strong>${{ item.product.onsale_price | calc_subtotal:item.quantity }}</p>
+                                                </strong>${{ item.product.onsale_price | calc_subtotal:item.quantity }}
+                                            </p>
                                             {% else %}
                                             <p class="my-0"><strong>Price Each: </strong>${{ item.product.price  }}</p>
                                             <p><strong>Subtotal:
@@ -60,7 +62,8 @@ Bag
                                                 <div class="quantity input-group">
                                                     Qty:
                                                     <div class="input-group-prepend">
-                                                        <button class="decrement-qty btn btn-sm btn-outline-black rounded-0"
+                                                        <button
+                                                            class="decrement-qty btn btn-sm btn-outline-black rounded-0"
                                                             data-item_id="{{ item.item_id }}"
                                                             id="decrement-qty_{{ item.item_id }}">
                                                             <span>
@@ -73,7 +76,8 @@ Bag
                                                         data-item_id="{{ item.item_id }}"
                                                         id="id_qty_{{ item.item_id }}">
                                                     <div class="input-group-append">
-                                                        <button class="increment-qty btn btn-sm btn-outline-black rounded-0"
+                                                        <button
+                                                            class="increment-qty btn btn-sm btn-outline-black rounded-0"
                                                             data-item_id="{{ item.product_id }}"
                                                             id="increment-qty_{{ item.item_id }}">
                                                             <span>
@@ -180,7 +184,7 @@ Bag
 
 <script type="text/javascript">
     // Update quantity on click
-    $('.update-link').click(function(e) {
+    $('.update-link').click(function (e) {
         var form = $(this).prev('.update-form');
         form.submit();
     })
