--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -18,9 +18,7 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <hr>
-                <h2 class="logo-font mb-4">Thank You</h2>
-                <hr>
+                <h2 class="page-banner text-white mt-4 mb-4">Thank You</h2>
                 <p class="text-black">Your order information is below. A confirmation email will be sent to <strong>{{ order.email }}</strong>.</p>
             </div>
         </div>
@@ -60,8 +58,19 @@
 
                     {% for item in order.lineitems.all %}
                     <div class="row">
+                        <div class="col-12 col-md-4">
+                            <p class="small mb-0 text-black font-weight-bold">
+                                {{ item.product.name }}
+                            </p>
+                        </div>
                         <div class="col-12 col-md-8 text-md-right">
-                            <p class="small mb-0">{{ item.quantity }} @ ${{ item.product.price }} each</p>
+                            <p class="small mb-0">{{ item.quantity }} @ 
+                                {% if item.prodduct.onsale %}
+                                    ${{ item.product.onsale_price }} each
+                                {% else %}
+                                    ${{ item.product.price }} each
+                                {% endif %}
+                            </p>
                         </div>
                     </div>
                     {% endfor %}
@@ -187,13 +196,22 @@
         </div>
         <div class="row">
 			<div class="col-12 col-lg-7 text-right">
-				<a href="{% url 'products' %}?category=new_arrivals,deals,clearance" class="btn btn-black rounded-0 my-2">
-					<span class="icon mr-2">
-						<i class="fas fa-gifts"></i>
-					</span>
-					<span class="text-uppercase">Now check out the latest deals!</span>
-				</a>
-			</div>
-		</div>
+                {% if from_profile %}
+                <a href="{% url 'profile' %}" class="btn btn-black my-2 mb-5">
+                    <span class="icon mr-2">
+                        <i class="fas fa-angle-left"></i>
+                    </span>
+                    <span>Back to Profile</span>
+                </a>
+            {% else %}
+                <a href="{% url 'products' %}?type=all_specials"  class="btn btn-black my-2 mb-5">
+                    <span class="icon mr-2">
+                        <i class="fas fa-gifts"></i>
+                    </span>
+                    <span>Now check out the latest deals!</span>
+                </a>
+            {% endif %}
+        </div>
     </div>
+</div>
 {% endblock %}
