--- a/inspo/templates/inspo/inspo.html
+++ b/inspo/templates/inspo/inspo.html
@@ -8,36 +8,35 @@
         </div>
     </div>
 {% endblock %}
+
 {% block content %}
     <div class="overlay"></div>
-        <div class="container px-3 products-page">
-            <div class="row inspo-items">
-                <div class="col mt-3">
-                    <h1 class="header-font mb-2 pt-1 text-center text-black">inspo Items ({{ inspo_items_count }})</h1>
-                </div>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <h2 class="page-banner text-white mt-4 mb-4">Inspo Items</h2>
             </div>
-            <hr>
+        </div>
             <div class="row">
                 <div class="container">
                     <div class="row">
                         {% for inspo_item in inspo_items_published %}
-                            <div class="col-sm-12 col-md-12 col-lg-6">
-                                <div class="card inspo-card p-1 mt-3">
-                                    <div class="">
+                            <div class="col-sm-12 col-md-12 col-lg-6 mb-5">
+                                <div class="mt-3">
+                                    <div>
                                         {% if inspo_item.image %}
                                             <a href="{% url 'inspo_item' inspo_item.id %}">
-                                                <img class="inspo-card-img-top" src="{{ inspo_item.image.url }}" alt="{{ inspo_item.title }}"/>
+                                                <img class="inspo-card" src="{{ inspo_item.image.url }}" alt="{{ inspo_item.title }}"/>
                                             </a>
                                         {% else %}
                                             <a href="{% url 'inspo_item' inspo_item.id %}">
-                                                <img class="inspo-card-img-top" src="{{ inspo_item.image_url }}" alt="{{ inspo_item.title }}"/>
+                                                <img class="inspo-card" src="{{ inspo_item.image_url }}" alt="{{ inspo_item.title }}"/>
                                             </a>
                                         {% endif %}
                                     </div>
-                                    <p class="text-muted mb-0">Posted By: {{ inspo_item.user }}</p>
-                                    <p class="text-muted">Posted On: {{ inspo_item.create_date }}</p>
-                                    <p class="text-muted">{{inspo_item.inspo_item_text|slice:":150" }} ..........</p>
-                                    <a href="{% url 'inspo_item' inspo_item.id %}" class="btn green-btn">Read More</a>
+                                    <div>
+                                        <a class="inspo-title" href="{% url 'inspo_item' inspo_item.id %}">{{ inspo_item.title}}</a>
+                                    </div>
                                 </div>
                             </div>
                         {% endfor %}
