--- a/static/css/base.css
+++ b/static/css/base.css
@@ -259,6 +259,12 @@ a.category-badge > span.badge:hover {
     text-decoration: underline;
 }
 
+.add-inspo a {
+    text-align: right;
+}
+
+
+
 /* -------------------------------- Media Queries */
 
 /* -------------------------------- Media Queries */
