--- a/inspo/templates/inspo/inspo_item.html
+++ b/inspo/templates/inspo/inspo_item.html
@@ -15,32 +15,30 @@
             <div class="form-holder-lg">
                 <div class="row">
                     <div class="col">
-                        <h1 class="header-font mb-2 pt-4 text-center black-white">{{ inspo_item.title}}</h1>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col">
                         <div class="text-center">
                             {% if inspo_item.image %}
-                                <img class="inspo-card-detail-img-top image-fluid" src="{{ inspo_item.image.url }}" alt="{{ inspo_item.title }}" />
+                                <img class="inspo-detail image-fluid mt-5" src="{{ inspo_item.image.url }}" alt="{{ inspo_item.title }}" />
                             {% else %}
-                                <img class="inspo-card-detail-img-top image-fluid" src="{{ inspo_item.image_url }}" alt="{{ inspo_item.title }}" />
+                                <img class="inspo-detail image-fluid mt-5" src="{{ inspo_item.image_url }}" alt="{{ inspo_item.title }}" />
                             {% endif %}
                         </div>
                     </div>
                 </div>
                 <div class="container">
-                    <div class="row">
-                        <div class="col">
+                    <div class="row justify-content-center">
+                        <div class="col col-md-6">
                             <div class="my-2">
+                                <h2 class="card-text mb-4 pt-4 text-center">{{ inspo_item.title}}</h2>
                                 <p class="card-text">{{ inspo_item.inspo_item_text }}</p>
-                                <p class="text-muted">Posted By: {{ inspo_item.user }} on the {{ inspo_item.create_date }}</p>
+                                <hr>
                             </div>
                             {% if inspo_item.user == request.user or request.user.is_superuser %}
-                                <a class="btn green-btn" href="{% url 'edit_inspo_item' inspo_item.id %}" role="button">Edit</a>
-                                <button type="button" class="btn black-btn" data-bs-toggle="modal"
+                            <div class="row justify-content-center">
+                                <a class="btn btn-info mb-5 mr-2" href="{% url 'edit_inspo_item' inspo_item.id %}" role="button">Edit</a>
+                                <button type="button" class="btn btn-danger mb-5" data-bs-toggle="modal"
                                 data-bs-target="#deleteInspoItem">
                                 Delete</button>
+                            </div>
                                 <!-- Delete Button Modal -->
                                 <div class="modal fade" id="deleteInspoItem" tabindex="-1" role="dialog" aria-labelledby="deleteInspoItem" aria-hidden="true">
                                     <div class="modal-dialog modal-dialog-centered" role="document">
@@ -55,7 +53,7 @@
                                             <div class="modal-footer">
                                                 <!-- Close and delete product buttons-->
                                                 <button type="button" class="btn black-btn" data-bs-dismiss="modal">Close</button>
-                                                <a href="{% url 'delete_inspo_item' inspo_item.id  %}" class="btn red-btn">Delete</a>
+                                                <a href="{% url 'delete_inspo_item' inspo_item.id  %}" class="btn btn-danger">Delete</a>
                                             </div>
                                         </div>
                                     </div>
