--- a/static/css/base.css
+++ b/static/css/base.css
@@ -380,9 +380,9 @@ a.category-badge > span.badge:hover {
     margin-bottom: 10px;
 }
 /* --- inspo item --- */
-.inspo-card-detail-img-top {
-    width: 500px ;
-    height: 500px ;
+.inspo-detail {
+    width: 600px ;
+    height: auto ;
 }
 /* --- Shopping bag --- */
 .bag-notification-wrapper {
