--- a/inspo/templates/inspo/inspo_item.html
+++ b/inspo/templates/inspo/inspo_item.html
@@ -48,11 +48,11 @@
                                                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                             </div>
                                             <div class="modal-body">
-                                                        You are about to delete Title ({{ inspo_item.title }}) 
+                                                        You are about to delete ({{ inspo_item.title }}) 
                                             </div>
                                             <div class="modal-footer">
                                                 <!-- Close and delete product buttons-->
-                                                <button type="button" class="btn black-btn" data-bs-dismiss="modal">Close</button>
+                                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                                                 <a href="{% url 'delete_inspo_item' inspo_item.id  %}" class="btn btn-danger">Delete</a>
                                             </div>
                                         </div>
