--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -39,12 +39,12 @@
                         <span class="float-right">€{{ total|floatformat:2 }}</span>
                     </p></strong>
                     {% if free_delivery_delta > 0 %}
-                        <p class="mb-0 p-2 bg-yellow shadow-sm text-black text-center">
-                            Spend <strong>€{{ free_delivery_delta }}</strong> more to get free next day delivery!
+                        <p class="mb-2 p-2 bg-info shadow-sm text-black text-center">
+                            Spend <strong>${{ free_delivery_delta }}</strong> more to get free next day delivery!
                         </p>
                     {% endif %}
-                    <a href="{% url 'view_bag' %}" class="btn black-btn rounded-0 center-div">
-                        <span class="text-uppercase">Go To Secure Checkout</span>
+                    <a href="{% url 'view_bag' %}" class="btn btn-black btn-block">
+                        <span>Go To Secure Checkout</span>
                         <span class="icon">
                             <i class="fas fa-lock"></i>
                         </span>
