--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -141,7 +141,7 @@ Bag
         </div>
         <div class="row cart-footer-row">
             <div class="col-lg-8">
-                <div class="row text-center">
+                <div class="text-center">
                     <a href="{% url 'products' %}" class="btn btn-black mt-2 mb-5 mr-2">
                         <span class="icon">
                             <i class="fas fa-chevron-left"></i>
