--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -2,8 +2,7 @@
     <div class="w-100 toast-capper bg-success"></div>
     <div class="toast-header bg-white text-dark">
         <strong class="mr-auto">Success!</strong>
-        <button type="button" class="ml-2 mb-1 btn-close text-dark" data-bs-dismiss="toast" aria-label="Close">
-        </button>
+        <button type="button" class="btn-close align-right" data-bs-dismiss="toast" aria-label="Close"></button>
     </div>
     <div class="toast-body bg-white">
         <div class="row">
@@ -43,11 +42,8 @@
                             Spend <strong>${{ free_delivery_delta }}</strong> more to get free next day delivery!
                         </p>
                     {% endif %}
-                    <a href="{% url 'view_bag' %}" class="btn btn-black btn-block">
-                        <span>Go To Secure Checkout</span>
-                        <span class="icon">
-                            <i class="fas fa-lock"></i>
-                        </span>
+                    <a href="{% url 'view_bag' %}" class="btn btn-black d-grid gap-2">
+                        <span>Go To Secure Checkout <i class="fas fa-lock"></i></span>
                     </a>
                 </div>
             </div>
